Add goblin enemy AI, player character, and update assets